Fixed styling on mobile?

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -222,7 +222,7 @@ iframe {
   .article-container {
     padding: 15px 15px 5px 15px;
     height: auto;
-    min-height: 100vh;
+    min-height: auto;
   }
 
   .back-button {
