--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -105,5 +105,6 @@ a {
     padding: 15px;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    background-color: white;
   }
 }
